@@ -104,3 +104,12 @@ paymongoCreatePaymentLink()
 generateReceiptNumber()
 encrypter()
 decrypter()
+toCamelCase()
+truncateString()
+flattenArray()
+uniqueMultidimensionalArray()
+calculateAge()
+humanReadableDate()
+sanitizeInput()
+factorial()
+fibonacci()
